--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="%PUBLIC_URL%'/images/favicon.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.ico" type="image/x-icon"/>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
